--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Valorant Points</title>
+  <title>Mamostore - Clash Royale Gems</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- EmailJS (v3) -->
