--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Valorant Points</title>
+  <title>Mamostore</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- EmailJS (v3) -->
@@ -691,15 +691,15 @@
       <h2>Поддержка и контакты</h2>
       <p>Если возникли вопросы, свяжитесь с нами:</p>
       <div class="support-icons">
-        <a href="https://t.me/Beast_brawl" target="_blank">
+        <a href="https://t.me/Mamosupport" target="_blank">
           <img src="https://i.imgur.com/x45z8on.png" alt="Telegram">
           Telegram
         </a>
-        <a href="mailto:info@valorant.su">
+        <a href="mailto:Mamoshop1@bk.ru">
           <img src="https://i.imgur.com/vsRyFJe.png" alt="Email">
           Почта
         </a>
-        <a href="https://t.me/Beast_brawl" target="_blank">
+        <a href="https://t.me/Mamosupport" target="_blank">
           <img src="https://i.imgur.com/x45z8on.png" alt="Manager">
           Менеджер
         </a>
@@ -712,24 +712,24 @@
   <section class="section-block fade-in-on-scroll" id="terms">
     <h1>Пользовательское соглашение (Оферта)</h1>
     <p>Настоящее соглашение является публичной офертой.</p>
-    <p>Используя сайт (valorant.su), вы принимаете эти условия.</p>
+    <p>Используя сайт (mamostore.su), вы принимаете эти условия.</p>
     <p><em>Дата последнего обновления: 31.01.2025 Ознакомиться можно на нашем сайте - <a href="offer.html" target="_blank">Пользовательское соглашение</a></em></p>
   </section>
 
   <!-- PRIVACY -->
   <section class="section-block fade-in-on-scroll" id="privacy">
     <h1>Политика конфиденциальности</h1>
-    <p>Определяет порядок обработки персональных данных (ФЗ-152) на сайте valorant.su</p>
+    <p>Определяет порядок обработки персональных данных (ФЗ-152) на сайте mamostore.su</p>
     <p><em>Дата последнего обновления: 31.01.2025 Политика конфиденциальности Ознакомиться можно на нашем сайте - <a href="policy.html" target="_blank">Политика конфиденциальности</a></em></p>
   </section>
 
   <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
-      <p>© 2025 Valorant Points. Все права защищены.</p>
+      <p>© 2025 Mamostore. Все права защищены.</p>
       <p>
-        <strong>ИП Филимонов Михаил Николаевич</strong>, ИНН: 150204790739 |
-        E-mail: info@valorant.su
+        <strong>ИП Мамоян Рустам Эдгарович</strong>, ИНН:290408168130 |
+        E-mail: mamoshop1@bk.ru
       </p>
       <p>
         <a href="offer.html">Пользовательское соглашение</a> |
