--- a/faq.html
+++ b/faq.html
@@ -134,7 +134,7 @@
     </div>
 
     <!-- 6 -->
-    <div class="section">
+    <!-- <div class="section">
       <h2>Возникли проблемы?</h2>
       <p>Если у вас возникли проблемы, обратитесь в нашу поддержку:</p>
       <ul>
@@ -145,7 +145,7 @@
 
     <div class="footer">
       <p>VALORANT.SU</p>
-    </div>
+    </div> -->
   </div>
 </body>
 </html>
