--- a/index.html
+++ b/index.html
@@ -125,16 +125,16 @@
     }
 
     /* HERO */
-    .hero {
-      height: 70vh; 
-      min-height: 400px; 
-      display: flex; 
-      align-items: center;
-      background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), 
-                url(https://i.imgur.com/AupYuJH.jpg) no-repeat center/cover;
-      color: white; 
-      text-align: center;
-    }
+.hero {
+  height: 70vh; 
+  min-height: 400px; 
+  display: flex; 
+  align-items: center;
+  background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), 
+            url(IMG_4852.JPG) no-repeat center/cover;
+  color: white; 
+  text-align: center;
+}
     .hero h1 {
       font-size: 3em; 
       margin-bottom: 20px;
