--- a/offer.html
+++ b/offer.html
@@ -56,9 +56,9 @@
 
   <div class="container">
     <h1 data-aos="fade-up">ДОГОВОР ПУБЛИЧНОЙ ОФЕРТЫ</h1>
-    <p data-aos="fade-up">
-      Настоящий Договор является официальным предложением (публичной офертой) ИП Филимонова Михаила Николаевича (ИНН: 150204790739, ОГРНИП 324150000050079), именуемого в дальнейшем Исполнитель (Пользователь) для полностью дееспособного физического лица, именуемого в дальнейшем Заказчик, которое примет настоящее предложение, на указанных ниже условиях.
-    </p>
+<p data-aos="fade-up">
+  Настоящий Договор является официальным предложением (публичной офертой) ИП Мамоян Рустам Эдгарович (ИНН: 290408168130, ОГРНИП 325774600300685), именуемого в дальнейшем Исполнитель (Пользователь) для полностью дееспособного физического лица, именуемого в дальнейшем Заказчик, которое примет настоящее предложение, на указанных ниже условиях.
+</p>
 
     <h2 data-aos="fade-right">1. ОБЩИЕ ПОЛОЖЕНИЯ</h2>
     <p data-aos="fade-right">
@@ -148,19 +148,19 @@
       8.5. Признание судом недействительности какого-либо положения настоящего Договора и правил не влечет за собой недействительность остальных положений.
     </p>
 
-    <h2 data-aos="fade-right">9. КОНТАКТНЫЕ ДАННЫЕ И РЕКВИЗИТЫ ИСПОЛНИТЕЛЯ</h2>
-    <p data-aos="fade-right">
-      ИП Филимонов Михаил Николаевич<br>
-      ИНН: 150204790739<br>
-      ОГРНИП 324150000050079<br>
-      Адрес: 362007, Республика Северная Осетия - Алания, г. Владикавказ, ул. Кутузова, д. 81, к. 5, кв. 14<br>
-      Банковские реквизиты:<br>
-      р/с 40802810300007501234<br>
-      в АО «ТБанк»<br>
-      к/с 30101810145250000974<br>
-      БИК 044525974<br>
-      E-mail: <a href="mailto:info@valorant.su">info@valorant.su</a>
-    </p>
+<h2 data-aos="fade-right">9. КОНТАКТНЫЕ ДАННЫЕ И РЕКВИЗИТЫ ИСПОЛНИТЕЛЯ</h2>
+<p data-aos="fade-right">
+  ИП Мамоян Рустам Эдгарович<br>
+  ИНН: 290408168130<br>
+  ОГРНИП 325774600300685<br>
+  Адрес: 125310, г. Москва, ш. Волоколамское, д. 95/2<br>
+  Банковские реквизиты:<br>
+  Р/с 40802810600008272851<br>
+  в АО «Тбанк»<br>
+  К/с 30101810145250000974<br>
+  БИК 044525974<br>
+  E-mail: <a href="mailto:mamoshop1@bk.ru">mamoshop1@bk.ru</a>
+</p>
   </div>
 
   <!-- Подключение AOS JS -->
