--- a/policy.html
+++ b/policy.html
@@ -52,22 +52,22 @@
 
   <div class="container">
     <h1 data-aos="fade-up">ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ</h1>
-    <p data-aos="fade-up">
-      Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального закона от 27.07.2006. № 152-ФЗ «О персональных данных» (далее – Закон о персональных данных) и определяет порядок обработки персональных данных и меры по обеспечению безопасности персональных данных, предпринимаемые ИП Филимонова Михаила Николаевича (ИНН: 150204790739, ОГРНИП 324150000050079), именуемого в дальнейшем Оператором.
-    </p>
+<p data-aos="fade-up">
+  Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального закона от 27.07.2006. № 152-ФЗ «О персональных данных» (далее – Закон о персональных данных) и определяет порядок обработки персональных данных и меры по обеспечению безопасности персональных данных, предпринимаемые ИП Мамоян Рустам Эдгарович (ИНН: 290408168130, ОГРНИП 325774600300685), именуемого в дальнейшем Оператором.
+</p>
 
     <h2 data-aos="fade-right">1. ОБЩИЕ ПОЛОЖЕНИЯ</h2>
     <p data-aos="fade-right">
       1.1. Оператор осуществляет свою деятельность с обязательным соблюдением прав и свобод человека и гражданина при обработке персональных данных, включая защиту права на частную жизнь, а также сохранение личной тайны.
     </p>
-    <p data-aos="fade-right">
-      1.2. Данная Политика обработки персональных данных (далее – Политика) распространяется на всю информацию, получаемую Оператором о посетителях веб-сайта <a href="https://valorant.su">https://valorant.su</a>.
-    </p>
+<p data-aos="fade-right">
+  1.2. Данная Политика обработки персональных данных (далее – Политика) распространяется на всю информацию, получаемую Оператором о посетителях веб-сайта <a href="https://mamostore.su">https://mamostore.su</a>.
+</p>
 
     <h2 data-aos="fade-left">2. ТЕРМИНЫ И ОПРЕДЕЛЕНИЯ</h2>
     <p data-aos="fade-left"><strong>2.1. Автоматизированная обработка персональных данных</strong> – обработка персональных данных с использованием вычислительных средств.</p>
     <p data-aos="fade-left"><strong>2.2. Блокирование персональных данных</strong> – временное прекращение обработки персональных данных, за исключением случаев, когда обработка необходима для их уточнения.</p>
-    <p data-aos="fade-left"><strong>2.3. Веб-сайт</strong> – совокупность графических и информационных материалов, а также программного обеспечения и баз данных, обеспечивающих их доступность в сети Интернет по адресу <a href="https://valorant.su">https://valorant.su</a>.</p>
+    <p data-aos="fade-left"><strong>2.3. Веб-сайт</strong> – совокупность графических и информационных материалов, а также программного обеспечения и баз данных, обеспечивающих их доступность в сети Интернет по адресу <a href="https://mamostore.su">https://mamostore.su</a>.</p>
     <p data-aos="fade-left"><strong>2.4. Информационная система персональных данных</strong> – комплекс баз данных, содержащих персональные данные, а также информационных технологий и технических средств, обеспечивающих их обработку.</p>
     <p data-aos="fade-left"><strong>2.5. Обезличивание персональных данных</strong> – процесс, при котором без дополнительной информации невозможно определить принадлежность персональных данных конкретному Пользователю или иному субъекту персональных данных.</p>
     <p data-aos="fade-left"><strong>2.6. Обработка персональных данных</strong> – любое действие (операция) или совокупность действий (операций) с персональными данными, выполняемых с использованием автоматизированных средств или без них, включая сбор, запись, систематизацию, накопление, хранение, обновление (изменение), извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование, удаление и уничтожение.</p>
@@ -145,8 +145,8 @@
       <li>7.1. Оператор гарантирует защиту персональных данных, применяя правовые, организационные и технические меры в соответствии с законодательными требованиями в сфере персональных данных.</li>
       <li>7.2. Оператор принимает все необходимые меры для предотвращения несанкционированного доступа к персональным данным и их утечки.</li>
       <li>7.3. Персональные данные Пользователя не передаются третьим лицам, за исключением случаев, предусмотренных законом, либо при наличии согласия субъекта персональных данных для выполнения условий гражданско-правового договора.</li>
-      <li>7.4. В случае обнаружения ошибок или устаревшей информации в персональных данных, Пользователь может обновить их, отправив уведомление Оператору на электронную почту <a href="mailto:info@valorant.su">info@valorant.su</a>.</li>
-      <li>7.5. Персональные данные обрабатываются до достижения целей их сбора, если иной срок не предусмотрен законом или договором. Пользователь может в любой момент отозвать свое согласие на обработку, отправив соответствующее уведомление на <a href="mailto:info@valorant.su">info@valorant.su</a>.</li>
+<li>7.4. В случае обнаружения ошибок или устаревшей информации в персональных данных, Пользователь может обновить их, отправив уведомление Оператору на электронную почту <a href="mailto:mamoshop1@bk.ru">mamoshop1@bk.ru</a>.</li>
+<li>7.5. Персональные данные обрабатываются до достижения целей их сбора, если иной срок не предусмотрен законом или договором. Пользователь может в любой момент отозвать свое согласие на обработку, отправив соответствующее уведомление на <a href="mailto:mamoshop1@bk.ru">mamoshop1@bk.ru</a>.</li>
       <li>7.6. Данные, собираемые сторонними сервисами (платежными системами или провайдерами связи), хранятся и обрабатываются в соответствии с их Политиками конфиденциальности и Пользовательскими соглашениями. Оператор не несет ответственности за их действия.</li>
       <li>7.7. Запреты субъекта персональных данных на передачу и обработку данных, разрешенных для распространения, не действуют в случаях, предусмотренных законодательством РФ в государственных, общественных или иных публичных интересах.</li>
       <li>7.8. Оператор обязуется соблюдать конфиденциальность персональных данных при их обработке.</li>
@@ -173,10 +173,9 @@
 
     <h2 data-aos="fade-right">11. ЗАКЛЮЧИТЕЛЬНЫЕ ПОЛОЖЕНИЯ</h2>
     <ul data-aos="fade-right">
-      <li>11.1. Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты <a href="mailto:info@valorant.su">info@valorant.su</a>.</li>
+      <li>11.1. Пользователь может получить любые разъяснения по интересующим вопросам, касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты <a href="mailto:mamoshop1@bk.ru">mamoshop1@bk.ru</a>.</li>
       <li>11.2. В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. Политика действует бессрочно до замены ее новой версией.</li>
-      <li>11.3. Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу <a href="https://valorant.su/policy">https://valorant.su/policy</a>.</li>
-    </ul>
+<li>11.3. Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу <a href="https://mamostore.su/policy">https://mamostore.su/policy</a>.</li>    </ul>
   </div>
 
   <!-- Подключение AOS JS -->
