--- a/offer.html
+++ b/offer.html
@@ -64,9 +64,9 @@
     <p data-aos="fade-right">
       1.1. В соответствии с пунктом 2 статьи 437 Гражданского Кодекса Российской Федерации (ГК РФ), в случае принятия изложенных ниже условий и оплаты услуг юридическое или физическое лицо, производящее акцепт этой оферты, становится Заказчиком (в соответствии с пунктом 3 статьи 438 ГК РФ акцепт оферты равносилен заключению Договора на условиях, изложенных в оферте).
     </p>
-    <p data-aos="fade-right">
-      1.2. Моментом полного и безоговорочного принятия Заказчиком предложения Исполнителя заключить Договор оферты (акцептом оферты) считается факт подтверждения готовности совершить оплату услуги Исполнителя, посредством нажатия кнопки «Купить» на сайте <a href="https://valorant.su" target="_blank">https://valorant.su</a>. Текст настоящего Договора-оферты (далее – Договор) расположен по адресу: <a href="https://valorant.su/offer" target="_blank">https://valorant.su/offer</a>.
-    </p>
+<p data-aos="fade-right">
+  1.2. Моментом полного и безоговорочного принятия Заказчиком предложения Исполнителя заключить Договор оферты (акцептом оферты) считается факт подтверждения готовности совершить оплату услуги Исполнителя, посредством нажатия кнопки «Купить» на сайте <a href="https://mamostore.su" target="_blank">https://mamostore.su</a>. Текст настоящего Договора-оферты (далее – Договор) расположен по адресу: <a href="https://mamostore.su/offer" target="_blank">https://mamostore.su/offer</a>.
+</p>
     <p data-aos="fade-right">
       1.3. Осуществляя акцепт Договора в порядке, определенном п. 1.3 Договора, Заказчик подтверждает, что он ознакомлен, согласен, полностью и безоговорочно принимает все условия Договора в том виде, в каком они изложены в тексте Договора, в том числе в приложениях к Договору, являющихся его неотъемлемой частью.
     </p>
@@ -89,9 +89,9 @@
     </p>
 
     <h2 data-aos="fade-right">3. ОПЛАТА УСЛУГ</h2>
-    <p data-aos="fade-right">
-      3.1. Стоимость услуг по Договору определяется в соответствии с действующими ценами и прописана на сайте <a href="https://valorant.su" target="_blank">https://valorant.su</a>.
-    </p>
+<p data-aos="fade-right">
+  3.1. Стоимость услуг по Договору определяется в соответствии с действующими ценами и прописана на сайте <a href="https://mamostore.su" target="_blank">https://mamostore.su</a>.
+</p>
     <p data-aos="fade-right">
       3.2. Стоимость услуг может быть изменена Исполнителем в одностороннем порядке.
     </p>
@@ -100,14 +100,14 @@
     </p>
 
     <h2 data-aos="fade-left">4. ИНТЕЛЛЕКТУАЛЬНАЯ СОБСТВЕННОСТЬ</h2>
-    <p data-aos="fade-left">
-      4.1. Вся текстовая информация и графические изображения, находящиеся на сайте <a href="https://valorant.su" target="_blank">https://valorant.su</a> являются собственностью Исполнителя.
-    </p>
+<p data-aos="fade-left">
+  4.1. Вся текстовая информация и графические изображения, находящиеся на сайте <a href="https://mamostore.su" target="_blank">https://mamostore.su</a> являются собственностью Исполнителя.
+</p>
 
     <h2 data-aos="fade-right">5. ОСОБЫЕ УСЛОВИЯ И ОТВЕТСТВЕННОСТЬ СТОРОН</h2>
-    <p data-aos="fade-right">
-      5.1. Исполнитель несет ответственность за своевременность предоставляемых услуг при выполнении Заказчиком установленных требований и правил, размещенных на сайте <a href="https://valorant.su" target="_blank">https://valorant.su</a>.
-    </p>
+<p data-aos="fade-right">
+  5.1. Исполнитель несет ответственность за своевременность предоставляемых услуг при выполнении Заказчиком установленных требований и правил, размещенных на сайте <a href="https://mamostore.su" target="_blank">https://mamostore.su</a>.
+</p>
     <p data-aos="fade-right">
       5.2. Исполнитель освобождается от ответственности за нарушение условий Договора, если такое нарушение вызвано действием обстоятельств непреодолимой силы (форс-мажор), включая: действия органов государственной власти, пожар, наводнение, землетрясение, другие стихийные действия, отсутствие электроэнергии, забастовки, гражданские волнения, беспорядки, любые иные обстоятельства, не ограничиваясь перечисленным, которые могут повлиять на выполнение Исполнителем Договора.
     </p>
